--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <section id="galeria">
             <h2>Galería del Festival</h2>
             <div class="galeria-container">
-                <img src="./img/Samuel-Prieto-1.jpeg" alt="Descripción de la foto 1">
-                <img src="./img/ponente-1.jpeg" alt="Descripción de la foto 2">
-                <img src="./img/ponencia-1.jpeg" alt="Descripción de la foto 3">
+                <img src="./img/Samuel-Prieto-1.jpeg" alt="Imagen de Samuel Prieto">
+                <img src="./img/ponente-1.jpeg" alt="Imangen de un ponente">
+                <img src="./img/ponencia-1.jpeg" alt="Imagen de las diapositivas de una ponencia">
             </div>
         </section>
 
@@ -76,4 +76,5 @@
 
     <script src="./js/script.js"></script>
 </body>
+
 </html>
